--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,4 @@
-. {
-    background-color: black;
-}
+
 
 h1 {
     color: blue;
@@ -9,12 +7,13 @@ h1 {
     padding: 10px;
     border: solid 3px;
     border-radius: 35px;
+    
 
 }
 
 
 * {
-    margin: 15px;px;
+    margin: 15px;
     
     padding:0;
     }
@@ -22,28 +21,37 @@ h1 {
     border-radius: 25px;
     border: 2px solid black;
     position:absolute;
-    top: 100px;px;
+    top: 100px;
     left:0px;
-    width: 300px;px;
+    width: 48%;
     margin-top:10px;
     background-color: #E5D5D1;
     text-align: center;
     font-style:italic;
+
+    float
+	display: block;
+	float:left;
     }
     #columna2 {
     position:absolute;
-    top: 100px;px;
+    top: 100px;
     border: 2px solid grey;
     border-radius: 25px;
-    margin-left:  350px;px;
+    margin-left:52%;
     margin-right:20px;
     margin-top:10px;
+
+    float
+	display: block;
+	float:left;
     }
 
     p {
         font-family: phudu;
         color: black;
         font-style: normal;
+        text-align:center;
     }
 
     img {
@@ -61,3 +69,4 @@ h1 {
       #habilidades {
         font-family: Poppins;
       }
+
